<resources>
    <string name="app_name">Al-Mirats</string>
    <string name="txt_home">Home</string>
    <string name="txt_materi">Material</string>
    <string name="txt_feedback">Feedback</string>
    <string name="txt_fatwa">Fatwa</string>
    <string name="txt_welcome">Hello, Welcome to</string>
    <string name="txt_name">Al-Mirats</string>
    <string name="txt_desc_feedback">Provide your feedback and suggestions to improve your app experience, We are thankful for your contribution toward making our Inheritance Calculator the best it can be!</string>
    <string name="txt_komentar">Enter your comments</string>
    <string name="txt_email">Enter your email</string>
    <string name="txt_materi_desc">Following are some practical details on inheritance and related laws and a guideline that helps you understand the process of dividing the assets better manner</string>
    <string name="txt_card_desc_calculator">Quickly calibrate the inheritance by distribution using our easy-to-use, accurate calculator feature.</string>
    <string name="txt_panduan">Tutorial</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_tentang_aplikasi">About Application</string>
    <string name="txt_desc_app"> Al-Mirats Calculator is a Mobile Phone Application. This project was done during the Terk Course of Mobile Application Development and was developed according to the teachings of the Islamic religion. This application helps you to quickly calculate the distribution of inheritance. In this application, you can also learn about inheritance.</string>
    <string name="txt_nama_aplikasi">Application Name: Al-Mirats</string>
    <string name="txt_tim">Development Team:</string>
    <string name="txt_nama_pengembang">Arfan Prihardiasyah \nBayu Mahesa \nRyan Hidayat</string>
    <string name="txt_nama_pengembang_2">Haibraiel Rabbany F.Z \nFarhan Nur Fauziy \nMuhammad Rayhan Hakim</string>
    <string name="txt_dosen">Herika Hayurani, S.Kom., M.Kom</string>
    <string name="txt_dosen_pembimbing">Supervisor:</string>
    <string name="txt_klien">Client:</string>
    <string name="txt_nama_klien">Dr. H. Karimulloh, M.A</string>
    <string name="txt_sumber">Content Source:</string>
    <string name="txt_sumber_desc">Hassan Saleh. Kajian Fiqh Nabawi dan Fiqh Kontemporer. Jakarta: PT Raja Grafindo Persada, 2008;
        \n\nIrma Devita Purnamasari. Kiat-Kiat Cerdas, Mudah dan Bijak Memahami Masalah Hukum Waris. Bandung: Penerbit Kaifa, 2012;
        \n\nMaimun Nawawi. Pengantar Hukum Kewarisan Islam. Surabaya: Pustaka Radja, 2016;
        \n\nSajuti Thalib. Hukum Kewarisan Islam di Indonesia, Jakarta: PT. Bina Aksara, 1984;
        \n\nSudarsono. Hukum Perkawinan Nasional. Jakarta: Rineka Cipta, 2010.
        \n\nAbu Muslim. Faraidh: Ayat Al Qur’an Seputar Warisan, 2022.
        \n\nAhmad Azhar Basyir. Hukum Waris Islam. Yogyakarta: Penerbit Ekonisia, 2001.
        \n\nMohammad Daud Ali. 2004. Hukum Islam: Pengantar Ilmu Hukum dan Tata Hukum Islam di Indonesia, Edisi Keenam. Jakarta: PT. RajaGrafindo Persada.
        \n\nSayuti Thalib. 2016. Hukum Kewarisan Islam di Indonesia. Jakarta: Sinar Grafika.
        \n\nan-nur.ac.id. Pengertian Ashabah dan Pembagiannya, 2022.</string>
    <string name="txt_kalkulator">Inheritance Calculator</string>
    <string name="txt_about">About</string>
    <string name="txt_materi_teratas">Top Material</string>
    <string name="txt_fitur_utama">Main Feature</string>
    <string name="txt_tutorial_desc">This tutorial guide will guide you step by step in understanding and utilizing the advanced features offered by Al Mirats.</string>
    <string name="txt_tutorial">Guide</string>
    <string name="txt_laki">Male</string>
    <string name="txt_perempuan">Female</string>
    <string name="txt_pilih_jenis_kelamin">Select the gender:</string>
    <string name="txt_informasi">Information</string>
    <string name="txt_materi_disarankan">Material Recommendation</string>
    <string name="txt_harta">Assets</string>
    <string name="txt_hutang">Debt</string>
    <string name="txt_jenazah">Cadaver Costs</string>
    <string name="txt_gender">Gender</string>
    <string name="txt_total">Total Assets</string>
    <string name="txt_hint_harta">Enter the assets</string>
    <string name="txt_hint_hutang">Enter the debt</string>
    <string name="txt_wasiat">Testament (Maximum ⅓ Total Assets)</string>
    <string name="txt_wasiat_2">Testament</string>
    <string name="txt_hint_wasiat">Enter the testment</string>
    <string name="txt_hint_jenazah">Enter mortuary care</string>
    <string name="txt_selanjutnya">Next</string>
    <string name="txt_ahli_waris">Heir</string>
    <string name="txt_bagian">Partition</string>
    <string name="txt_jumlah_orang">Total</string>
    <string name="txt_harta_bagian">Sectional Property</string>
    <string name="txt_harta_perorang">Individual Assets</string>
    <string name="txt_keterangan">information</string>
    <string name="txt_total_pembagian">Total Assets</string>
    <string name="txt_jumlah">Total</string>
    <string name="txt_total_harta_bersih">Total Assets</string>
    <string name="txt_jumlah_istri">Number of Wifes</string>
    <string name="txt_jumlah_anak_laki_laki">Number of boys</string>
    <string name="txt_jumlah_anak_perempuan">Number of daughters (From boys)</string>
    <string name="txt_jumlah_cucu_laki_laki">Number of grandsons (From boys)</string>
    <string name="txt_jumlah_cucu_perempuan">Number of granddaughters</string>
    <string name="txt_pilih_anggota">Select existing family members</string>
    <string name="txt_pasangan">Does the testator have a partner?</string>
    <string name="txt_jumlah_saudara_seayah_seibu">Number of brother</string>
    <string name="txt_jumlah_saudari_seayah_seibu">Number of sister</string>
    <string name="txt_title">Enter the title</string>
    <string name="txt_ayah">Father</string>
    <string name="txt_ibu">Mother</string>
    <string name="txt_ayah_dari_ayah">Grandmother from Father</string>
    <string name="txt_ibu_dari_ayah">Grandfather from Father</string>
    <string name="txt_ibu_dari_ibu">Grandmother from Mother</string>
    <string name="txt_suami">Husband</string>
    <string name="txt_istri">Wife</string>
    <string name="txt_saudara_seayah_seibu">Brother</string>
    <string name="txt_saudari_seayah_seibu">Sister</string>
    <string name="txt_anak_laki">Son</string>
    <string name="txt_anak_perempuan">Daughter</string>
    <string name="txt_cucu_laki">Grand Son</string>
    <string name="txt_cucu_perempuan">Grand Daughter</string>
    <string name="txt_mail">*Send feedback via any email method.</string>
    <string name="source">Source</string>
    <string name="txt_copyright">Copyright © by Rumah Fiqih Indonesia</string>
    <string name="txt_selesai">Finish</string>
    <string name="txt_team_alqudra">©2024, Team AL-QUDRA</string>
    <string name="txt_team_marbay">©2023, Team MARBAY</string>
    <string name="txt_kirim">Send</string>
    <string name="txt_mulai">Start</string>
    <string name="txt_selamat">Lets start using Al-Mirats!</string>
    <string name="txt_welcome_2">Calculate the distribution of inheritance according to sharia easily, quickly, and accurately.</string>
    <string name="txt_dark_mode">Dark Mode</string>
    <string name="title_materi_1">What is Inheritance</string>
    <string name="heading_materi_1">Definition Inheritance</string>
    <string name="desc_materi_1">The word "inheritance" means the property or money left by the deceased. Inheritance will be constituted of many things, such as money, investments, or any other value. The contrasts that are here are between the words "inheritance" and the word "will." This means that inheritance is a property given by law, whether Islamic or civil. A will, on the other hand, is a document that explains the individual desires of the property owner and must be executed by the relevant law.
        \n\n The provisions related to inheritance under the principles of the Qur an, which are provided for in Islamic law, provide specific provisions. The laws would generally relate to the disposal of the assets upon the death of a person to their successors. In an Islamic inheritance, the system is based on considerations of justice. In Islamic law, the heirs are a husband, wife, children, parents, and siblings. The main aim of the Islamic inheritance system is that the family relationships and the level of dependence of the beneficiaries justify the level of inheritance assets received.</string>
    <string name="source_materi_1">https://www.prudentialsyariah.co.id/id/pulse/article/apa-itu-warisan/#:~:text=Pengertian%20Warisan,investasi%2C%20dan%20benda%20berharga%20lainnya.</string>
    <string name="title_materi_2">Verses Explaining About Inheritance</string>
    <string name="heading_materi_2">Verses from the Qur-an about Inheritance</string>
    <string name="desc_materi_2">There are several verses in the Qur-an that explain the distribution of inheritance. Among them is the word of Allah\n
         \nلِلرِّجَالِ نَصِيبٌ مِمَّا تَرَكَ الْوَالِدَانِ وَالْأَقْرَبُون َ وَلِلنِّسَاءِ نَصِيبٌ مِمَّا تَرَكَ الْوَالِدَانِ وَالْأَقْروبَُُ \n
         \nFor men there is the right to share in the assets inherited from their parents and relatives, and for women there is the right to share (also) in the assets inherited from their parents and relatives, whether a little or a lot according to the portion that has been determined. (QS. An Nisaa : 7)
         \n\n In the pre-Islamic period, the Arabs being unreasonable and rude in behavior used to inherit the stronger ones like men. The weak people, like women and children, remain ignorant just on behalf of being cowardly. According to their opinion, men are those who make war and peace, and besides, men only have the right to obtain the assets they get through their endless efforts. Thus, the Most Merciful, the All-wise, wanted a law that brings everybody on one level about men and women, strong people and weak people, a law initiated by Ar-Rabb. (Taisir Al-Karim Ar-Rahman fi Tafsir Kalam Al-Mannan, Page 201</string>
    <string name="source_materi_2">https://alukhuwah.com/2022/06/24/faraidh-ayat-al-quran-seputar-warisan/#:~:text=Dahulu%20bangsa%20Arab%20di%20masa,kepada%20laki%2Dlaki%20yang%20kuat.</string>
    <string name="title_materi_3">Which Parties Have the Right to Receive Inheritance</string>
    <string name="heading_materi_3">the party entitled to receive it</string>
    <string name="desc_materi_3">Those who receive the inheritance are called heirs, and Islamic inheritance law has determined the order and portion of each heir. Heirs can either consist of the nuclear family, such as children, husband, or wife, or even wider members of the family, like the parents, siblings, and even distant relatives.
        \n\nReference\n1. Al-Qur an, Surah An-Nisa (4:11-12)\n2. Hadith History of Bukhari and Muslim\n3. Islamic Inheritance Law by Prof. Dr. Quraish Shihab\n4. Fatwa of the Indonesian Ulema Council (MUI) or local religious authority.</string>
    <string name="source_materi_3">https://www.prudentialsyariah.co.id/id/pulse/article/pembagian-harta-warisan-menurut-islam/#:~:text=Menurut%20Imam%20Muhammad%20bin%20Ali,dan%20saudara%20perempuan%20satu%20ayah.</string>
    <string name="title_materi_4">What is the Structure of the Main Inheritance Division</string>
    <string name="heading_materi_4">Section for primary heirs</string>
</resources>