<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="12dp"
    android:layout_height="match_parent"
    android:background="?android:windowBackground"
    tools:context=".presentation.splash.SplashScreen">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btn_kirimMasukan"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="12dp">

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/txt_selamat"
            android:textColor="?android:textColorPrimary"
            android:textSize="34sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="60dp"
            android:src="@drawable/img_onboard" />

        <TextView
            android:id="@+id/tv_welcome_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/txt_welcome_2"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:backgroundTint="@color/primary_dark_blue"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/txt_mulai"
        android:textColor="@color/primary_white"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>