<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".presentation.kalkulator.gender.JenisKelaminPewarisActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/txt_kalkulator"
            android:textColor="@color/primary_light_blue"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@id/iv_back"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        app:layout_constraintTop_toBottomOf="@id/ll_header"
        app:layout_constraintBottom_toBottomOf="@id/btn_lanjut"
        android:id="@+id/ll_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_jenis_kelamin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/txt_pilih_jenis_kelamin"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/rg_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb_laki"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_laki" />

            <RadioButton
                android:id="@+id/rb_perempuan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_perempuan" />
        </RadioGroup>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/btn_lanjut"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:backgroundTint="@color/primary_dark_blue"
        android:fontFamily="@font/roboto_bold"
        android:text="Selanjutnya"
        android:textColor="@color/primary_white"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>